--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,7 +1,5 @@
-<section>
 <footer>
   <div class="wrap">
-    <p>♥ Made in NYC by <a target="_blank" href="https://twitter.com/twahlin">Tom Wahlin</a> and <a target="_blank" href="https://twitter.com/cbroeckert">Cassie Broeckert</a>. Download the <a href="http://bullshitsheriff.com/images/press-kit.zip">press kit</a>.</p> 
+    Sup footer
   </div>
 </footer>
-</section>
