--- a/source/_masthead.erb
+++ b/source/_masthead.erb
@@ -1,24 +1,5 @@
-<section>
 <header>
-  <nav>
-    <div class="wrap">
-      <a class="logo" href="http://bullshitsheriff.com/"><h1>Bullshit Sheriff</h1></a>
-      <ul>
-		  <li><a href="#signup">Join the waitlist</a></li>
-      </ul>
-    </div>
-  </nav>
   <div class="wrap">
-    <div class="hero-content">
-      <h2>Cracking down on posted bullshit</h2>
-			
-			<p>Has your friend been acting suspicious lately? Wondering where the hell that guy’s getting all his likes from? Does that photo look too good to be true? Better get the Bullshit Sheriff—a state of the art social media service that sniffs out lies and tags offenders with the truth</p>
-        <ul class="social-share">
-          <li><div class="fb-share-button" data-href="http://bullshitsheriff.com/" data-layout="button_count"></div></li>
-					<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bullshitsheriff.com/" data-text="Let’s make social media an honest place. If you see posted bullshit, tag the scene of the crime with #BullshitSheriff">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
-        </ul>
-	</div>
+    Sup header
   </div>
 </header>
-</section>
