--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,8 +4,15 @@ title: Desktop Disco
 
 
 <section>
-  <h3>Wax</h3>
-  <p></p>
+  <div class="wrap">
+    <h3>Wax</h3>
+    <p>Nothing beats the superior sound of vinyl (as long as there’s a sound system to support it).</p>
+  </div>
 </section>
 
-
+<section>
+  <div class="wrap">
+    <h3>Pioneer CDJ</h3>
+    <p>The club standard. If you’ve played out or been up close to the booth, chances are you've seen one of these in action.</p>
+  </div>
+</section>
