--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -43,6 +43,12 @@ $lightest: rgba(241, 233, 221, 1);
 }
 
 // ==========================================================================
+//   Media Queries
+// ==========================================================================
+
+$patternAssetNames: wax, cdj, disco-ball;
+
+// ==========================================================================
 //   Transitions
 // ==========================================================================
 
