--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,5 +1,6 @@
 <footer>
   <div class="wrap">
     Sup footer
+    Want a different sized background? Have another request? <a href="https://twitter.com/twahlin">Tweet at me</a>
   </div>
 </footer>
