--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -41,441 +41,484 @@
 //}
 //
 
+//body {
+//  -webkit-appearance:none;
+//  -webkit-animation-name: welcome;
+//  -webkit-animation-duration: .9s;
+//  background: $darkest;
+//  color: $lightest;
+//  @include tisa-regular;
+//}
+//
+//h1, h2, h3, h4, h5, h6 {
+//  @include league-gothic;
+//
+//}
+//
+//p {
+//  font-size: 16px;
+//  line-height: 20px;
+//}
+//strong {
+//  @include tisa-bold;
+//}
+//em {
+//  @include tisa-italic;
+//}
+//
+//.wrap {
+//  margin: 0 auto;
+//  max-width: 1400px;
+//  padding: 0 20px;
+//  overflow: hidden;
+//  @include breakpoint(medium) {
+//    padding: 0 40px;
+//  }
+//  @include breakpoint(large) {
+//    padding: 0 80px;
+//  }
+//}
+//
+//
+//
+//h3 {
+//  font-size: 40px;
+//}
+//
+//a {
+//  color: $middle;
+//  text-decoration: none;
+//}
+//
+//a:hover {
+//  text-decoration: underline;
+//}
+//
+//.cta {
+//  cursor: pointer;
+//  color: $darkest;
+//  font-size: 20px;
+//  background: $middle;
+//  display: inline-block;
+//  height: 44px;
+//  line-height: 44px;
+//  padding: 0 12px;
+//  text-align: center;
+//  @include league-gothic;
+//  @include transition-all;
+//  @include border-radius(2px);
+//}
+//
+//.cta:hover {
+//  text-decoration: none;
+//  background: $lightest;
+//}
+//
+//
+//header {
+//  padding-top: 40px;
+//  background: $darkest;
+//  background: url(../images/hero.jpg) no-repeat center center;
+//  -webkit-background-size: cover;
+//  -moz-background-size: cover;
+//  -o-background-size: cover;
+//  background-size: cover;
+//  nav {
+//    border-top:1px solid black;
+//    border-bottom:1px solid black;
+//    height: 50px;
+//    background: transparentize($darkest, .1);
+//    width: 100%;
+//    margin-bottom: 40px;
+//    overflow: visible;
+//    position: relative;
+//    line-height: 50px;
+//    .logo {
+//      position: absolute;
+//      height: 78px;
+//      padding-left: 78px;
+//      line-height: 78px;
+//      float: left;
+//      top: -14px;
+//      background: url(../images/bullshit-sheriff-logo.png) no-repeat left center;
+//      @include image-2x("../images/bullshit-sheriff-logo@2x.png", 68px, 78px);
+//      overflow: visible;
+//      h1 {
+//        font-size: 24px;
+//        cursor: pointer;
+//      }
+//    }
+//    ul {
+//      float: right;
+//      li {
+//        float: right;
+//        @include league-gothic;
+//        font-size: 18px;
+//      }
+//    }
+//  }
+//  .hero-content {
+//    max-width: 800px;
+//    margin: 0 auto;
+//    padding: 0 0 40px 0;
+//    @include text-shadow(0 2px 30px $darkest);
+//    text-align: left;
+//    @include breakpoint(small) { padding: 20px 0; }
+//    @include breakpoint(small) { padding: 40px 0; }
+//  h2 {
+//    font-size: 60px;
+//    text-align: center;
+//    margin-bottom: 30px;
+//    @include breakpoint(small) { font-size: 80px; }
+//    @include breakpoint(medium) { font-size: 120px; }
+//  }
+//  p {
+//    text-align: center;
+//    margin-bottom: 20px;
+//    @include breakpoint(small) { font-size: 16px; line-height: 24px; }
+//    @include breakpoint(medium) { font-size: 22px; line-height: 30px; }
+//  }
+//  .social-share {
+//    text-align: center;
+//    li {
+//      display: inline-block;
+//      padding: 0 10px;
+//    }
+//  }
+//  }
+//}
+//
+//section {
+//    background-color: $darker;
+//    background-image: url("../images/site-assets/pattern-tom-wahlin-wax.png") no-repeat center center;
+//    @include image-2x("../images/site-assets/pattern-tom-wahlin-wax@2x.png", 64px, 64px);
+//  .explainer-bullshit {
+//    overflow: hidden;
+//  }
+//  .module-wrap {
+//    background-color: $darkest;
+//    margin: 0 auto;
+//    .module-screen {
+//        -webkit-background-size: cover;
+//        -moz-background-size: cover;
+//        -o-background-size: cover;
+//        background-size: cover;
+//      width: 100%;
+//      height: 100%;
+//    @include transition-all;
+//    }
+//  }
+//}
+//
+//
+//
+//
+//section:nth-child(odd) {
+//  background-color: $darkest;
+//  .module-wrap {
+//    background-color: $darker;
+//  }
+//}
+//
+//
+//
+//.how-it-works {
+//  padding-top: 20px;
+//      @include breakpoint(medium) {
+//        padding: 60px 0;
+//      }
+//  h3 {
+//    text-align: center;
+//    margin-bottom: 20px;
+//    @include breakpoint(medium) {
+//      font-size: 60px;
+//      margin-bottom: 40px;
+//    }
+//  }
+//  li:nth-child(1) {
+//      .how-icon {
+//          background: url(../images/icon-user.png) no-repeat center center;
+//          @include image-2x("../images/icon-user@2x.png", 64px, 64px);
+//  }
+//}
+//  li:nth-child(2) {
+//      .how-icon {
+//          background: url(../images/icon-badge.png) no-repeat center center;
+//          @include image-2x("../images/icon-badge@2x.png", 64px, 64px);
+//  }
+//}
+//  li:nth-child(3) {
+//      .how-icon {
+//          background: url(../images/icon-megaphone.png) no-repeat center center;
+//          @include image-2x("../images/icon-megaphone@2x.png", 64px, 64px);
+//  }
+//}
+//  li {
+//    line-height: 20px;
+//    text-align: center;
+//    margin-bottom: 30px;
+//    @include breakpoint(medium) {
+//      float: left;
+//      width: 33.33%;
+//    }
+//    p {
+//      @include breakpoint(medium) {
+//        padding: 0 16px;
+//
+//      }
+//            @include breakpoint(large) {
+//              font-size: 20px;
+//              line-height: 28px;
+//            }
+//    }
+//    .how-icon {
+//      margin: 0 auto 10px auto;
+//      display: block;
+//      height: 64px;
+//      width: 64px;
+//    }
+//  }
+//}
+//
+//.phone-module-wrap {
+//  height: 440px;
+//  width: 280px;
+//  @include breakpoint(large) {
+//    height: 600px;
+//    width: 382px;
+//  }
+//  border-top-right-radius: 20px;
+//  border-top-left-radius: 20px;
+//  padding: 40px 15px 0 15px;
+//  .frame-instagram { background-image: url(../images/screenshot-instagram.jpg);}
+//  .frame-instagram-truth { background-image: url(../images/screenshot-instagram-bs.jpg);}
+//  .frame-facebook { background-image: url(../images/screenshot-facebook.jpg);}
+//  .frame-facebook-truth { background-image: url(../images/screenshot-facebook-bs.jpg);}
+//  .frame-linkedin { background-image: url(../images/screenshot-linkedin.jpg);}
+//  .frame-linkedin-truth { background-image: url(../images/screenshot-linkedin-bs.jpg);}
+//}
+//
+//.monitor-module-wrap {
+//  height: 200px;
+//  width: 300px;
+//  border-top-right-radius: 14px;
+//  border-bottom-right-radius: 14px;
+//  float: left;
+//  padding: 15px 15px 15px 10px;
+//  .monitor-module {
+//     background-image: url(../images/screenshot-facebook.jpg);
+//  }
+//  .frame-facebook-truth {
+//    background-position: center bottom;
+//  }
+//}
+//
+//.case-study {
+//  padding: 20px 0 0 0;
+//  @include breakpoint(medium) {
+//    padding: 60px 0 0 0;
+//  }
+//  .explainer-bullshit {
+//    max-width: 400px;
+//    @include breakpoint(medium) {
+//      float: left;
+//    }
+//    @include breakpoint(large) {
+//      padding-top: 60px;
+//    }
+//    .case-cracked {
+//      display: block;
+//      margin-bottom: 16px;
+//      text-transform: uppercase;
+//      font-size: 13px;
+//    }
+//    h3 {
+//      margin-bottom: 16px;
+//    }
+//    p {
+//      margin-bottom: 20px;
+//      line-height: 24px;
+//    }
+//    .cta {
+//      margin-bottom: 40px;
+//    }
+//  }
+//  .phone-module-wrap {
+//    @include breakpoint(medium) {
+//      float: right;
+//    }
+//  }
+//}
+//
+//.case-study-opposite {
+//  .explainer-bullshit {
+//    @include breakpoint(medium) {
+//      float: right;
+//    }
+//  }
+//  .phone-module-wrap {
+//    @include breakpoint(medium) {
+//      float: left;
+//    }
+//  }
+//}
+//
+//
+//.action-items {
+//  .col-left{
+//    float: left;
+//    width: 50%;
+//    .col-wrap {
+//      padding-right: 20px;
+//    }
+//  }
+//  .col-right{
+//    float: right;
+//    width: 50%;
+//    .col-wrap {
+//      padding-left: 20px;
+//    }
+//  }
+//
+//}
+//
+//.hiring {
+//  padding: 20px 0 20px;
+//  @include breakpoint(small) {
+//      padding: 40px 0 40px;
+//  }
+//  @include breakpoint(large) {
+//      padding: 80px 0 80px;
+//  }
+//  background: url(../images/hiring.png) no-repeat left center;
+//  .hiring-points {
+//    max-width: 400px;
+//    float: right;
+//    @include text-shadow(0 2px 30px $darkest);
+//    h3 {
+//      margin-bottom: 12px;
+//    }
+//    p {
+//      margin-bottom: 16px;
+//    }
+//    ul {
+//      line-height: 20px;
+//      padding-left: 20px;
+//      padding-bottom: 4px;
+//      li {
+//        list-style-type: circle;
+//        margin-bottom: 12px;
+//      }
+//    }
+//  }
+//}
+//
+//.sign-up {
+//  padding: 20px 0;
+//  @include breakpoint(small) {
+//      padding: 40px 0 40px;
+//  }
+//  @include breakpoint(large) {
+//      padding: 80px 0 80px;
+//  }
+//  h3 {
+//    margin-bottom: 12px;
+//  }
+//  p {
+//    margin-bottom: 18px;
+//  }
+//form {
+//  label {
+//    display: block;
+//    margin-bottom: 10px;
+//    color: $middle;
+//  }
+//  input {
+//    color: $darker;
+//    border-radius: 0;
+//    background: $lightest;
+//    border: none;
+//    display: block;
+//    width: 66%;
+//    height: 44px;
+//    margin-bottom: 10px;
+//    padding: 0;
+//    float: left;
+//    padding: 0 2%;
+//    @include tisa-regular;
+//  }
+//  input[type="submit"] {
+//    padding: 0;
+//    background: $middle;
+//    font-size: 20px;
+//    color: $darkest;
+//    display: inline-block;
+//    width: auto;
+//    float: right;
+//    width: 30%;
+//    @include league-gothic;
+//  }
+//}
+//}
+//
+//footer {
+//  padding: 20px 0;
+//  p {
+//    font-size: 14px;
+//  }
+//}
+
+// ==========================================================================
+//   Disco
+// ==========================================================================
+
 body {
-	-webkit-appearance:none;
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s;
-  background: $darkest;
-  color: $lightest; 
-  @include tisa-regular;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	@include league-gothic;
-	
-}
-
-p {
-	font-size: 16px;
-	line-height: 20px;
-}
-strong {
-	@include tisa-bold;
-}
-em {
-	@include tisa-italic;
-}
-
-.wrap {
-  margin: 0 auto;
-  max-width: 1400px;
-  padding: 0 20px;
-  overflow: hidden;
-	@include breakpoint(medium) {
-		padding: 0 40px;
-	}
-	@include breakpoint(large) {
-		padding: 0 80px;
-	}
-}
-
-
-
-h3 {
-	font-size: 40px;
-}
-
-a {
-	color: $middle;
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-.cta {
-	cursor: pointer;
-	color: $darkest;
-	font-size: 20px;
-	background: $middle;
-	display: inline-block;
-	height: 44px;
-	line-height: 44px;
-	padding: 0 12px;
-	text-align: center;
-	@include league-gothic;
-	@include transition-all;
-	@include border-radius(2px);
-}
-
-.cta:hover {
-	text-decoration: none;
-	background: $lightest;
-}
-
-
-header {
-  padding-top: 40px;
-  background: $darkest;
-  background: url(../images/hero.jpg) no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  nav {
-		border-top:1px solid black;
-		border-bottom:1px solid black;
-    height: 50px;
-    background: transparentize($darkest, .1);
-    width: 100%;
-    margin-bottom: 40px;
-    overflow: visible;
-    position: relative;
-		line-height: 50px;
-    .logo {
-      position: absolute;
-      height: 78px;
-      padding-left: 78px;
-      line-height: 78px;
-      float: left;
-      top: -14px;
-      background: url(../images/bullshit-sheriff-logo.png) no-repeat left center;
-      @include image-2x("../images/bullshit-sheriff-logo@2x.png", 68px, 78px);
-      overflow: visible;
-			h1 {
-				font-size: 24px;
-				cursor: pointer;
-			}
-    }
-    ul {
-      float: right;
-      li {
-        float: right;
-				@include league-gothic;
-				font-size: 18px;
-      }
-    }
-  }
-  .hero-content {
-    max-width: 800px;
-    margin: 0 auto;
-		padding: 0 0 40px 0;
-		@include text-shadow(0 2px 30px $darkest);
-		text-align: left;
-		@include breakpoint(small) { padding: 20px 0; }
-		@include breakpoint(small) { padding: 40px 0; }
-  h2 {
-    font-size: 60px;
-    text-align: center;
-    margin-bottom: 30px;
-		@include breakpoint(small) { font-size: 80px; }
-		@include breakpoint(medium) { font-size: 120px; }
-  }
-  p {
-    text-align: center;
-		margin-bottom: 20px;
-		@include breakpoint(small) { font-size: 16px; line-height: 24px; }
-		@include breakpoint(medium) { font-size: 22px; line-height: 30px; }
-  }
-	.social-share {
-		text-align: center;
-		li {
-			display: inline-block;
-			padding: 0 10px;
-		}
-	}
-  }
+  background: #e2e2e2;
 }
 
 section {
-  	background-color: $darker;
-    background-image: url(../images/site-assets/four-oh-four.png) no-repeat center center;
-    background: red;
-  .explainer-bullshit {
-	  overflow: hidden;
+  background-attachment: fixed;
+  height: 600px;
+}
+
+//.wax {
+//  background-image: url("../images/site-assets/pattern-tom-wahlin-wax.png");
+//  @include image-2x("../images/site-assets/pattern-tom-wahlin-wax@2x.png", 350px, 350px);
+//}
+//
+//.cdj {
+//  background-image: url("../images/site-assets/pattern-tom-wahlin-cdj.png");
+//  @include image-2x("../images/site-assets/pattern-tom-wahlin-cdj@2x.png", 350px, 350px);
+//}
+//
+//.disco-ball {
+//  background-image: url("../images/site-assets/pattern-tom-wahlin-disco-ball.png");
+//  @include image-2x("../images/site-assets/pattern-tom-wahlin-disco-ball@2x.png", 350px, 350px);
+//}
+
+
+
+
+@for $i from 1 through length($patternAssetNames) {
+  
+  $thisPatternAssetName: nth($patternAssetNames, $i);
+  $thisPatternAssetURL: $thisPatternAssetName#{-pattern-tom-wahlin}; 
+  
+  .#{nth($patternAssetNames, $i)} {
+    background-image: "../image/site-assets/#{$thisPatternAssetURL}.png";
   }
-  .module-wrap {
-  	background-color: $darkest;
-  	margin: 0 auto;
-  	.module-screen {
-  	    -webkit-background-size: cover;
-  	    -moz-background-size: cover;
-  	    -o-background-size: cover;
-  	    background-size: cover;
-  		width: 100%;
-  		height: 100%;
-		@include transition-all;
-  	}
-  }
 }
 
-
-
-
-section:nth-child(odd) {
-	background-color: $darkest;
-  .module-wrap {
-  	background-color: $darker;
-  }
+.wax {
+  background: url("../images/site-assets/wax-pattern-tom-wahlin.png");
 }
 
-
-
-.how-it-works {
-	padding-top: 20px;
-			@include breakpoint(medium) {
-				padding: 60px 0;
-			}
-	h3 {
-		text-align: center;
-		margin-bottom: 20px;
-		@include breakpoint(medium) {
-			font-size: 60px;
-			margin-bottom: 40px;
-		}
-	}
-	li:nth-child(1) {	
-			.how-icon {
-    			background: url(../images/icon-user.png) no-repeat center center;
-    			@include image-2x("../images/icon-user@2x.png", 64px, 64px);
-	}
-}
-	li:nth-child(2) {	
-			.how-icon {
-    			background: url(../images/icon-badge.png) no-repeat center center;
-    			@include image-2x("../images/icon-badge@2x.png", 64px, 64px);
-	}
-}
-	li:nth-child(3) {	
-			.how-icon {
-    			background: url(../images/icon-megaphone.png) no-repeat center center;
-    			@include image-2x("../images/icon-megaphone@2x.png", 64px, 64px);
-	}
-}
-	li {
-		line-height: 20px;
-		text-align: center;
-		margin-bottom: 30px;
-		@include breakpoint(medium) {
-			float: left;
-			width: 33.33%;
-		}
-		p {
-			@include breakpoint(medium) {
-				padding: 0 16px;
-
-			}
-						@include breakpoint(large) {
-							font-size: 20px;
-							line-height: 28px;			
-						}
-		}
-		.how-icon {
-			margin: 0 auto 10px auto;
-			display: block;
-			height: 64px;
-			width: 64px;
-		}
-	}
-}
-
-.phone-module-wrap {
-	height: 440px;
-	width: 280px;
-	@include breakpoint(large) {
-		height: 600px;
-		width: 382px;
-	}
-	border-top-right-radius: 20px;
-	border-top-left-radius: 20px;
-	padding: 40px 15px 0 15px;
-	.frame-instagram { background-image: url(../images/screenshot-instagram.jpg);}
-	.frame-instagram-truth { background-image: url(../images/screenshot-instagram-bs.jpg);}
-	.frame-facebook { background-image: url(../images/screenshot-facebook.jpg);}
-	.frame-facebook-truth { background-image: url(../images/screenshot-facebook-bs.jpg);}	
-	.frame-linkedin { background-image: url(../images/screenshot-linkedin.jpg);}
-	.frame-linkedin-truth { background-image: url(../images/screenshot-linkedin-bs.jpg);}		
-}
-
-.monitor-module-wrap {
-	height: 200px;
-	width: 300px;
-	border-top-right-radius: 14px;
-	border-bottom-right-radius: 14px;
-	float: left;
-	padding: 15px 15px 15px 10px;
-	.monitor-module {
-	 	background-image: url(../images/screenshot-facebook.jpg);	
-	}
-	.frame-facebook-truth {
-		background-position: center bottom;
-	}
-}
-
-.case-study {
-	padding: 20px 0 0 0;
-	@include breakpoint(medium) {
-		padding: 60px 0 0 0;
-	}
-	.explainer-bullshit {
-		max-width: 400px;
-		@include breakpoint(medium) {
-			float: left;
-		}
-		@include breakpoint(large) {
-			padding-top: 60px;
-		}
-		.case-cracked {
-			display: block;
-			margin-bottom: 16px;
-			text-transform: uppercase;
-			font-size: 13px;
-		}
-		h3 {
-			margin-bottom: 16px;
-		}
-		p {
-			margin-bottom: 20px;
-			line-height: 24px;
-		}
-		.cta {
-			margin-bottom: 40px;
-		}
-	}
-	.phone-module-wrap {
-		@include breakpoint(medium) {
-			float: right;
-		}
-	}
-}
-
-.case-study-opposite {
-	.explainer-bullshit {
-		@include breakpoint(medium) {
-			float: right;
-		}
-	}
-	.phone-module-wrap {
-		@include breakpoint(medium) {
-			float: left;
-		}
-	}
-}
-
-
-.action-items {
-	.col-left{
-		float: left;
-		width: 50%;
-		.col-wrap {
-			padding-right: 20px;
-		}
-	}
-	.col-right{
-		float: right;
-		width: 50%;
-		.col-wrap {
-			padding-left: 20px;
-		}
-	}
-
-}
-
-.hiring {
-	padding: 20px 0 20px;
-	@include breakpoint(small) { 
-			padding: 40px 0 40px; 
-	}
-	@include breakpoint(large) { 
-			padding: 80px 0 80px; 
-	}
-	background: url(../images/hiring.png) no-repeat left center;
-	.hiring-points {	
-		max-width: 400px;
-		float: right;
-		@include text-shadow(0 2px 30px $darkest);
-		h3 {
-			margin-bottom: 12px;
-		}
-		p {
-			margin-bottom: 16px;
-		}
-		ul {
-			line-height: 20px;
-			padding-left: 20px;
-			padding-bottom: 4px;
-			li {
-				list-style-type: circle;
-				margin-bottom: 12px;
-			}
-		}
-	}
-}
-
-.sign-up {
-	padding: 20px 0;
-	@include breakpoint(small) { 
-			padding: 40px 0 40px; 
-	}
-	@include breakpoint(large) { 
-			padding: 80px 0 80px; 
-	}
-	h3 {
-		margin-bottom: 12px;
-	}
-	p {
-		margin-bottom: 18px;
-	}
-form {
-	label {
-		display: block;
-		margin-bottom: 10px;
-		color: $middle;
-	}
-	input {
-		color: $darker;
-		border-radius: 0;
-		background: $lightest;
-		border: none;
-		display: block;
-		width: 66%;
-		height: 44px;
-		margin-bottom: 10px;
-		padding: 0;
-		float: left;
-		padding: 0 2%;
-		@include tisa-regular;
-	}
-	input[type="submit"] {
-		padding: 0;
-		background: $middle;
-		font-size: 20px;
-		color: $darkest;
-		display: inline-block;
-		width: auto;
-		float: right;
-		width: 30%;
-		@include league-gothic;
-	}
-}
-}
-
-footer {
-	padding: 20px 0;
-	p {
-		font-size: 14px;
-	}
-}
-
-/* ==========================================================================
-   Begin Disco CSS
-   ========================================================================== */
-
+// ==========================================================================
+//   404 page
+// ==========================================================================
 
 .four-oh-four {
-  background: url(images/site-assets/four-oh-four.png);
-//  @include image-2x("../images/build/four-oh-four@2x.png", 350px, 350px);
+  background: url("../images/site-assets/pattern-tom-wahlin-four-oh-four.png");
+  @include image-2x("../images/site-assets/pattern-tom-wahlin-four-oh-four@2x.png", 350px, 350px);
 }
-
 
