--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -18,13 +18,9 @@
 //   Colors
 // ==========================================================================
 
-$darkest: rgba(62, 54, 52, 1);
-$darker: rgba(81, 74, 72, 1);
-$dark: rgba(125, 111, 102, 1);
-$middle: rgba(179, 157, 136, 1);
-$light: rgba(199, 177, 153, 1);
-$lighter: rgba(228, 212, 187, 1);
-$lightest: rgba(241, 233, 221, 1);
+$turquoise: rgba(26, 188, 156,1.0);
+$green-sea: rgba(22, 160, 133,1.0);
+
 
 // ==========================================================================
 //   Media Queries
