--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,6 +1,8 @@
 <footer>
   <div class="wrap">
-    Sup footer
-    Want a different sized background? Have another request? <a href="https://twitter.com/twahlin">Tweet at me</a>
+    <ul>
+      <li>Want a different sized background? Have another request? <a href="https://twitter.com/twahlin">Tweet at me</a></li>
+      <li>Created &amp; curated by <a href="http://tomwahlin.com">Tom Wahlin</a>.</li>
+    </ul>
   </div>
 </footer>
