--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,7 @@
 title: Desktop Disco
 ---
 
+<!-- Description: Wallpaper Disco was created and curated by Tomm Wahlin, and was a part of the 100 days of making project. -->
 
 <section class="wax">
   <div class="wrap">
