index updates and image tile asset updates

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -41,17 +41,11 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <!-- END Facebook SDK -->
-		
-		<!-- preload images -->
-		<script>
-		  pic = new Image();
-		  pic2 = new Image();
-		  pic3 = new Image();
-		    pic.src="images/screenshot-facebook-bs.jpg";
-		    pic2.src="images/screenshot-instagram-bs.jpg";
-		    pic3.src="images/screenshot-linkedin-bs.jpg";
-		</script>
-		<!-- end preload images -->
+    
+    <!-- Pinterest JS -->
+    <script type="text/javascript" async defer src="//assets.pinterest.com/js/pinit.js"></script>
+		<!-- Pinterest JS -->
+    
     
     <div class="page-wrap">
       <%= partial "masthead" %>
