--- a/source/stylesheets/_mixins.scss
+++ b/source/stylesheets/_mixins.scss
@@ -1,3 +1,5 @@
+
+
 // ==========================================================================
 //   2x images
 // ==========================================================================
@@ -39,10 +41,12 @@ $green-sea: rgba(22, 160, 133,1.0);
 }
 
 // ==========================================================================
-//   Media Queries
+//   Pattern Asset Names
 // ==========================================================================
 
 $patternAssetNames: wax, cdj, disco-ball;
+
+
 
 // ==========================================================================
 //   Transitions
