--- a/source/_masthead.erb
+++ b/source/_masthead.erb
@@ -1,5 +1,7 @@
 <header>
   <div class="wrap">
-    Sup header
+    Sup header 
+    <div class="fb-like" data-href="https://www.facebook.com/wallpaperdisco" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://wallpaperdisco.com/" data-text="Wallpaper Disco: Downloadable wallpapers to dance up your devices." data-via="twahlin">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
 </header>
