--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,26 +1,36 @@
 ---
-title: Desktop Disco
+title: Wallpaper Disco
 ---
 
 <!-- Description: Wallpaper Disco was created and curated by Tomm Wahlin, and was a part of the 100 days of making project. -->
 
-<section class="wax">
-  <div class="wrap">
-    <h3>Wax</h3>
-    <p>Nothing beats the superior sound of vinyl (as long as there’s a sound system to support it).</p>
-  </div>
-</section>
 
-<section class="cdj">
-  <div class="wrap">
-    <h3>Pioneer CDJ</h3>
-    <p>The club standard. If you’ve played out or been up close to the booth, chances are you've seen one of these in action.</p>
-  </div>
-</section>
+<!-- <h1>Friends</h1>
+<ol>
+  <% data.patterndata.patterns.each do |p| %>
+  <li><%= p["name"] %> <%= p["description"] %></li>
+  <% end %>
+</ol> -->
 
-<section class="disco-ball">
+
+
+
+
+
+<% data.patterndata.patterns.each do |p| %>
+<%nameSlug = p['name'].downcase.strip.gsub(' ', '-').gsub(/[^\w-]/, '') %>
+<section class="<%= nameSlug%>" id="<%= nameSlug%>">
   <div class="wrap">
-    <h3>Disco Ball</h3>
-    <p>The club standard. If you’ve played out or been up close to the booth, chances are you've seen one of these in action.</p>
+    <h3><%= p['name']%></h3>
+    <p><%= p["description"] %></p>
+    <ul>
+      <li><a href="#">Button 1</a></li>
+      <li><a href="#">Button 2</a></li>
+      <li><a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwww.flickr.com%2Fphotos%2Fkentbrew%2F6851755809%2F&media=http%3A%2F%2Ffarm8.staticflickr.com%2F7027%2F6851755809_df5b2051c9_z.jpg&description=Next%20stop%3A%20Pinterest" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></li>
+    </ul>
   </div>
 </section>
+<% end %>
+
+
+
