--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -489,6 +489,7 @@ section {
   
   .#{nth($patternAssetNames, $i)} {
     background-image: url("../images/pattern-tiles/#{$thisPatternAssetURL}.png");
+    @include image-2x("../images/pattern-tiles/#{$thisPatternAssetURL}@2x.png", 350px, 350px);
   }
 }
 
