--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,6 +21,8 @@
     <title><%= current_page.data.title || "The Middleman" %></title>
     
     <%= stylesheet_link_tag "normalize", "all" %>
+    <%= partial "pattern-backgrounds" %>
+
 
   </head>
   
