Doing stuff for website

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,8 +31,8 @@
   Nerd ascii art -->
   
   <body class="<%= page_classes %>">
-  <script src="//use.typekit.net/sia1rpd.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>
+    <script src="//use.typekit.net/sxr8xhm.js"></script>
+    <script>try{Typekit.load();}catch(e){}</script>
     <!-- Facebook SDK -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
