--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,17 +8,17 @@ title: Wallpaper Disco
 <%nameSlug = p['name'].downcase.strip.gsub(' ', '-').gsub(/[^\w-]/, '') %>
 <section class="<%= nameSlug%>" id="<%= nameSlug%>">
   <div class="wrap">
+    <div class="pattern-info">
     <h3><%= p['name']%></h3>
     <p><%= p["description"] %></p>
     <ul>
-      <li><a href="#">Button 1</a></li>
-      <li><a href="#">Button 2</a></li>
-      <!-- <li><a href="//www.pinterest.com/pin/create/button/?url=http://wallpaperdisco.com/#<%= p['nameSlug']%>&http://wallpaperdisco.com/images/external/<%= p['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20WallpaperDisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></li> -->
-      <li><a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwallpaperdisco.com%2F%23<%= nameSlug%>&media=http%3A%2F%2Fwallpaperdisco.com%2Fimages%2Fexternal%2F<%= p['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20Wallpaperdisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></li>
+      <li><a href="#">▼ iPhone 6</a></li>
+      <li><a href="#">▼ Android</a></li>
+      <li><a href="#">▼ Desktop</a></li> 
+      <li><a href="#">▼ Square Tile</a></li>            
     </ul>
+    <div class="button-pinterest"><a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwallpaperdisco.com%2F%23<%= nameSlug%>&media=http%3A%2F%2Fwallpaperdisco.com%2Fimages%2Fexternal%2F<%= p['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20Wallpaperdisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></div>
+  </div>
   </div>
 </section>
 <% end %>
-
-
-
