Updating the masthead

--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -1,8 +1,8 @@
-<footer>
+<!-- <footer>
   <div class="wrap">
     <ul>
       <li>Want a different sized background? Have another request? <a href="https://twitter.com/twahlin">Tweet at me</a></li>
       <li>Created &amp; curated by <a href="http://tomwahlin.com">Tom Wahlin</a>.</li>
     </ul>
   </div>
-</footer>
+</footer> -->
