--- a/source/_masthead.erb
+++ b/source/_masthead.erb
@@ -1,10 +1,12 @@
 <header>
   <div class="wrap">
-    <h1><a href="#">Wallpaper Disco</a></h1>
-    <h2>Dance up your desktop and devices | By <a href="#">Tom Wahlin</a></h2>
+    <div class="logo">
+      <h1><a href="#">Wallpaper Disco</a></h1>
+      <p>Dance up your desktop and devices | <a href="http://tomwahlin.com">By Tom Wahlin</a></p>
+    </div>
     <ul>
-      <li><div class="fb-like" data-href="https://www.facebook.com/wallpaperdisco" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></li>
       <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://wallpaperdisco.com/" data-text="Wallpaper Disco: Downloadable wallpapers to dance up your devices." data-via="twahlin">Tweet</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
+      <li><div class="fb-like" data-href="https://www.facebook.com/wallpaperdisco" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></li>
       <li><a class="tumblr-share-button" data-color="blue" data-notes="right" href="https://embed.tumblr.com/share"></a><script>!function(d,s,id){var js,ajs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://secure.assets.tumblr.com/share-button.js";ajs.parentNode.insertBefore(js,ajs);}}(document, "script", "tumblr-js");</script></li>
     </ul>
   </div>
