--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,10 +12,10 @@ title: Wallpaper Disco
     <h3><%= p['name']%></h3>
     <p><%= p["description"] %></p>
     <ul>
-      <li><a href="#">▼ iPhone 6</a></li>
-      <li><a href="#">▼ Android</a></li>
-      <li><a href="#">▼ Desktop</a></li> 
-      <li><a href="#">▼ Square Tile</a></li>            
+      <li><a href="images/external/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin-iPhone-6-and-6-plus.png">▼ iPhone 6</a></li>
+      <li><a href="images/external/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin-android.png">▼ Android</a></li>
+      <li><a href="images/external/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin-macbook-pro-15-retina.png">▼ Desktop</a></li> 
+      <li><a href="images/pattern-tiles/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin@2x.png">▼ Repeatable Tile</a></li>            
     </ul>
   </div>
   </div>
