image and html updates

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,26 +9,22 @@
     
     <!-- Open Graph -->
     <!-- https://developers.facebook.com/docs/plugins/checklist -->
-    <meta property="og:site_name" content="Bullshit Sheriff" />
+    <meta property="og:site_name" content="Wallpaper Disco" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:url" content="http://bullshitsheriff.com" />
-    <meta property="og:title" content="Bullshit Sheriff" />
-    <meta property="og:description" content="Together we can make social media an honest place. If you see posted bullshit, tag the scene of the crime with #BullshitSheriff." />
-    <meta property="og:image" content="http://bullshitsheriff.com/images/bullshit-sheriff-facebook-share.jpg" />
+    <meta property="og:url" content="http://wallpaperdisco.com/" />
+    <meta property="og:title" content="Wallpaper Disco" />
+    <meta property="og:description" content="Dance up your desktop and devices. Created by Tom Wahlin" />
+    <meta property="og:image" content="http://wallpaperdisco.com/images/site-assets/wallpaper-disco-facebook-share.jpg" />
     
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title || "Wallpaper Disco" %></title>
     
     <%= stylesheet_link_tag "normalize", "all" %>
     <%= partial "pattern-backgrounds" %>
 
 
   </head>
-  
-  <!-- Nerd ascii art
-  NERD ALERT! If you want to download all these files as repeatable PNG tiles, go to this link: www.blah.com
-  Nerd ascii art -->
   
   <body class="<%= page_classes %>">
     <script src="//use.typekit.net/sxr8xhm.js"></script>
