--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,21 +4,30 @@ title: Wallpaper Disco
 
 <!-- Description: Wallpaper Disco was created and curated by Tomm Wahlin, and was a part of the 100 days of making project. -->
 
-<% data.patterndata.patterns.each do |p| %>
-<%nameSlug = p['name'].downcase.strip.gsub(' ', '-').gsub(/[^\w-]/, '') %>
-<section class="pattern-section <%= nameSlug%>" id="<%= nameSlug%>">
-  <div class="wrap">
-    <div class="pattern-info">
-    <h3><%= p['name']%></h3>
-    <p><%= p["description"] %></p>
-    <ul>
-      <li><a target="_blank" href="images/external/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin-iPhone-6-and-6-plus.png">▼ iPhone</a></li>
-      <li><a target="_blank" href="images/external/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin-android.png">▼ Android</a></li>
-      <li><a target="_blank" href="images/external/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin-macbook-pro-15-retina.png">▼ Desktop</a></li> 
-      <li><a target="_blank" href="images/pattern-tiles/<%= p["imageSlug"] %>-wallpaper-disco-tom-wahlin@2x.png">▼ Repeatable Tile</a></li>            
-    </ul>
-  </div>
-  </div>
-  <div class="button-pinterest"><a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwallpaperdisco.com%2F%23<%= nameSlug%>&media=http%3A%2F%2Fwallpaperdisco.com%2Fimages%2Fexternal%2F<%= p['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20Wallpaperdisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></div>
-</section>
+<% data.patterndata.patterns.each_slice(5) do |sections| %> <!-- Slicing places share row every x pattern tiles -->
+<div class="gallery">
+  <% sections.each do |pattern| %>
+  <%nameSlug = pattern['name'].downcase.strip.gsub(' ', '-').gsub(/[^\w-]/, '') %>
+  <section class="pattern-section <%= nameSlug%>" id="<%= nameSlug%>">
+    <div class="wrap">
+      <div class="pattern-info">
+        <h3><%= pattern['name']%></h3>
+        <p><%= pattern["description"] %></p>
+        <ul>
+          <li><a target="_blank" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-iPhone-6-and-6-plus.png">▼ iPhone</a></li>
+          <li><a target="_blank" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-android.png">▼ Android</a></li>
+          <li><a target="_blank" href="images/external/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin-macbook-pro-15-retina.png">▼ Desktop</a></li> 
+          <li><a target="_blank" href="images/pattern-tiles/<%= pattern["imageSlug"] %>-wallpaper-disco-tom-wahlin@2x.png">▼ Repeatable Tile</a></li>            
+        </ul>
+      </div>
+    </div>
+    <div class="button-pinterest"><a href="//www.pinterest.com/pin/create/button/?url=http%3A%2F%2Fwallpaperdisco.com%2F%23<%= nameSlug%>&media=http%3A%2F%2Fwallpaperdisco.com%2Fimages%2Fexternal%2F<%= pattern['imageSlug']%>-wallpaper-disco-tom-wahlin-pinterest.png&description=Dance%20up%20your%20desktop%20and%20devices%20with%20Wallpaperdisco.com" data-pin-do="buttonPin" data-pin-config="none" data-pin-color="white"><img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_white_20.png" /></a></div>
+  </section>
+  <% end %>
+  <section class="share-interstitial">
+    <div class="wrap">
+      Like what you're seeing? Share!
+    </div>
+  </section>
+</div>
 <% end %>
