--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -182,16 +182,39 @@ header {
   background: $clouds;
   padding: 22px 0;
   h4 {
-    float: left;
-    font-size: 24px;
-    padding-top: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 30px;
+    @include breakpoint(medium) {
+      text-align: left;
+      float: left;
+      padding-top: 8px;
+      margin-bottom: 0;
+      margin-left: 20px;
+    }
   }
   .share-widget {
     overflow: hidden;
     text-align: center;
     li {
+      display: block;
+      margin-bottom: 10px;
+      padding: 0;
+    @include breakpoint(medium) {
       padding: 0 10px;
       display: inline-block;
+      margin-bottom: 0;
+    }
+    a {
+      display: block;
+      padding: 0;
+      width: 100%;
+          @include breakpoint(medium) {
+            padding-left: 25px;
+             width: 110px; 
+          }
+          
+    }
     }
   }
 }
