Wallpaper disco light logo hover updates

--- a/source/_masthead.erb
+++ b/source/_masthead.erb
@@ -10,12 +10,11 @@
 
 <header>
   <div class="wrap">
-    <div class="logo">
-      <a href="http://wallpaperdisco.com/">
+      <a class="home-link" href="http://wallpaperdisco.com/">
+        <div class="wallpaper-disco-logo"></div>
         <h1>Wallpaper Disco</h1>
-        <p>Dance up your desktop and devices | </p>
+        <p>Dance up your desktop and devices.</p>
       </a>
-      <p><a href="http://tomwahlin.com">By Tom Wahlin</a></p>
-    </div>
+    <h2><a onclick="_gaq.push(['_trackEvent', 'Link to TomWahlin.com', 'Click', 'Header']);" href="http://tomwahlin.com">By: Tom Wahlin</a></h2>
   </div>
 </header>
