--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,7 @@ title: Wallpaper Disco
   <% end %>
   <section class="share-interstitial">
     <div class="wrap">
-      <h4>Care to share?</h4>
+      <h4>Share Wallpaper Disco:</h4>
       <%= partial "share-widget" %>
     </div>
   </section>
