--- a/source/_masthead.erb
+++ b/source/_masthead.erb
@@ -15,6 +15,6 @@
         <h1>Wallpaper Disco</h1>
         <p>Dance up your desktop and devices.</p>
       </a>
-    <h2>By: <a onclick="_gaq.push(['_trackEvent', 'Link to TomWahlin.com', 'Click', 'Header']);" href="http://tomwahlin.com">Tom Wahlin</a></h2>
+    <h2>Created by <a onclick="_gaq.push(['_trackEvent', 'Link to TomWahlin.com', 'Click', 'Header']);" href="http://tomwahlin.com">Tom Wahlin</a></h2>
   </div>
 </header>
