--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -99,18 +99,39 @@ header {
     a {
       color: $clouds;
       text-transform: none;
+      text-decoration: underline;
       @include transition-all;
       @include futura-book;
     }
     a:hover {
-      border-bottom: 1px solid $clouds;
       color: $clouds;
     }
   }
 }
 
-
-
+footer {
+  background: $midnight-blue;
+  color: $clouds;
+  text-align: center;
+  padding: 20px 0;
+  overflow: hidden;
+  padding: 100px 0;
+  p {
+    font-size: 36px;
+    line-height: 46px;
+    max-width: 500px;
+    margin: 0 auto;
+    a {
+      color: #fff;
+      text-transform: none;
+      @include tisa-bold;
+    }
+    a:hover {
+      text-decoration: underline;
+      color: #fff;
+    }
+  }
+}
 
 .pattern-section {
   background-attachment: fixed;
@@ -182,6 +203,7 @@ header {
     }
     a:hover {
       border: none;
+    	@include box-shadow( 0px 0px 0px 2px transparentize($clouds, .6) inset);
     }
   }
   .share-facebook {
