--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -232,6 +232,7 @@ footer {
 .share-interstitial {
   background: $clouds;
   padding: 22px 0;
+  position: relative;
   h4 {
     text-align: center;
     margin-bottom: 20px;
@@ -239,9 +240,13 @@ footer {
     @include breakpoint(medium) {
       text-align: left;
       float: left;
-      padding-top: 8px;
+      padding-top: 10px;
       margin-bottom: 0;
       margin-left: 20px;
+      font-size: 24px;
+    }
+  @include breakpoint(large) {
+      position: absolute;
     }
   }
   .share-widget {
