--- a/source/_masthead.erb
+++ b/source/_masthead.erb
@@ -1,13 +1,3 @@
-<!-- <header>
-  <div class="wrap">
-    <div class="logo">
-      <h1><a href="#">Wallpaper Disco</a></h1>
-      <p>Dance up your desktop and devices | <a href="http://tomwahlin.com">By Tom Wahlin</a></p>
-    </div>
-  </div>
-</header> -->
-
-
 <header>
   <div class="wrap">
       <a class="home-link" href="http://wallpaperdisco.com/">
@@ -15,6 +5,8 @@
         <h1>Wallpaper Disco</h1>
         <p>Dance up your desktop and devices.</p>
       </a>
-    <h2>Created by <a onclick="_gaq.push(['_trackEvent', 'Link to TomWahlin.com', 'Click', 'Header']);" href="http://tomwahlin.com">Tom Wahlin</a></h2>
+    <h2><a onclick="_gaq.push(['_trackEvent', 'Link to shop', 'Click', 'Header']);" href="http://society6.com/twahlin/cases">VISIT THE SHOP&rarr;</a></h2>
   </div>
 </header>
+
+
