--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,8 @@
 ---
 title: Wallpaper Disco
----
+--- 
+
+
 
 <!-- Description: Wallpaper Disco was created and curated by Tomm Wahlin, and was a part of the 100 days of making project. -->
 
@@ -10,6 +12,21 @@ title: Wallpaper Disco
   <%nameSlug = pattern['name'].downcase.strip.gsub(' ', '-').gsub(/[^\w-]/, '') %>
   <section class="pattern-section <%= nameSlug%>" id="<%= nameSlug%>">
     <div class="wrap">
+			
+			<!-- video test -->
+			<!-- monome-test1280.mov -->
+			<!-- <div style="width: 350px; position: absolute; left: 50%; margin-left: -175px; z-index: 5000;">
+			<video class="autoplayVideo" width="100%" poster="static/video/choicePoster.png" loop="" controls="" onclick="this.paused?this.play():this.pause();">
+			        <source src="images/test/monome-test1280.mov" type="video/mp4"> -->
+			        <!-- <source src="static/video/choice.webm" type="video/webm"> -->
+			        <!-- <img src="static/video/choicePoster.png">
+			      </video>
+
+						</div> -->
+			
+			<!-- video test -->
+			
+			
       <div class="pattern-info">
         <h3><%= pattern['name']%></h3>
         <p><%= pattern["description"] %></p>
